--- a/Client/src/LoginGUI.form
+++ b/Client/src/LoginGUI.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ClientGUI">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="LoginGUI">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -21,7 +21,7 @@
       <component id="f189a" class="javax.swing.JTextField" binding="textField1" default-binding="true">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="2" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="398"/>
+            <preferred-size width="150" height="10"/>
           </grid>
         </constraints>
         <properties>
