--- a/Client/src/PlayingGUI.form
+++ b/Client/src/PlayingGUI.form
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="PlayingGUI">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="CardLayout" hgap="0" vgap="0">
+  <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
-    <children/>
+    <children>
+      <component id="cc138" class="javax.swing.JLabel" binding="label1">
+        <constraints border-constraint="North"/>
+        <properties>
+          <text value="Label"/>
+        </properties>
+      </component>
+    </children>
   </grid>
 </form>
